--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,8 @@ on:
   pull_request:
     types:
       - closed
+    branches:
+      - main
 
 jobs:
   update_version:
@@ -42,8 +44,8 @@ jobs:
             sed -i "s/release-v[0-9]*\.[0-9]*\.[0-9]*/release-v$ESCAPED_VERSION/" README.md
             # Mise à jour de la version dans composer.json
             sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" composer.json
-            # Mise à jour de la version dans assets/package.json
-            sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" assets/package.json
+            # Mise à jour de la version dans public/js/package.json
+            sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" public/js/package.json
             # Mise à jour de la version dans package.json
             sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
             echo "Updated files with version: $VERSION"
@@ -59,7 +61,7 @@ jobs:
             git config --local user.name "GitHub Action"
             git config --local user.email "action@github.com"
             git checkout main
-            git add README.md composer.json assets/package.json package.json CHANGELOG.md
+            git add README.md composer.json public/js/package.json package.json CHANGELOG.md
             git commit -m "chore(release): update version to $VERSION"
             git push origin main
 
@@ -70,7 +72,21 @@ jobs:
             git tag -a "$VERSION" -m "Release version $VERSION"
             git push origin "$VERSION"
 
-      # Étape 6 : Fusionner main dans dev pour synchroniser
+      # Étape 6 : Créer une GitHub Release
+      - name: Generate latest changelog
+        run: |
+          npx conventional-changelog -p angular -r 1 > latest-changelog.md
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ env.VERSION }}
+          name: "Release ${{ env.VERSION }}"
+          body_path: latest-changelog.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Étape 7 : Fusionner main dans dev pour synchroniser
       -   name: Merge main into dev
           run: |
             git checkout dev
