--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
             PR_TITLE="${{ github.event.pull_request.title }}"
             VERSION=$(echo "$PR_TITLE" | grep -oP '\d+\.\d+\.\d+(?:[a-zA-Z0-9\.-]+)?')
             if [ -z "$VERSION" ]; then
-              echo "No valid version (e.g. 1.2.3, 1.2.3-b, 1.2.3-beta) found in PR title: $PR_TITLE"
+              echo "❌ No valid version (e.g. 1.2.3, 1.2.3-b, 1.2.3-beta) found in PR title: $PR_TITLE"
               exit 1
             fi
             echo "VERSION=$VERSION" >> $GITHUB_ENV
@@ -40,20 +40,17 @@ jobs:
           run: |
             VERSION=${{ env.VERSION }}
             ESCAPED_VERSION=$(echo $VERSION | sed 's/[.[\*^$]/\\&/g')
-            # Mise à jour du badge dans README.md
             sed -i "s/release-v[0-9]*\.[0-9]*\.[0-9]*/release-v$ESCAPED_VERSION/" README.md
-            # Mise à jour de la version dans composer.json
             sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" composer.json
-            # Mise à jour de la version dans public/js/package.json
             sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" public/js/package.json
-            # Mise à jour de la version dans package.json
             sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" package.json
-            echo "Updated files with version: $VERSION"
+            echo "✅ Updated version to $VERSION"
 
       # Étape 3 : Générer le changelog
       - name: Install changelog dependencies
         run: |
           npm install --save-dev conventional-changelog-cli conventional-changelog-angular
+
       - name: Generate changelog
         run: |
           npx conventional-changelog -p angular -i CHANGELOG.md -s
